Create IRepositories, Repositories and DTO

--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Interface\Interface.csproj" />
     <ProjectReference Include="..\Model\Model.csproj" />
   </ItemGroup>
 
