change PK CourseID and EnrollmentID into ID

--- a/BasicCrudOperations/appsettings.json
+++ b/BasicCrudOperations/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\LAPTOP-JD250Q2U\SQL2019;Database=BasicCrudOperationDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-JD250Q2U\\SQL2019;Database=BasicCrudOperationDB;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
